@@ -23,7 +23,10 @@ import org.springframework.core.io.WritableResource;
 import org.springframework.util.Assert;
 
 /**
+ * A builder implementation for the {@link AvroItemWriter}.
+ *
  * @author David Turanski
+ * @author Mahmoud Ben Hassine
  * @since 4.2
  */
 public class AvroItemWriterBuilder<T> {
@@ -107,11 +110,10 @@ public class AvroItemWriterBuilder<T> {
 
 		Assert.notNull(this.type, "A 'type' is required.");
 
-
 		AvroItemWriter<T> avroItemWriter = this.schema != null ?
-				new AvroItemWriter(this.resource, this.schema, this.type):
+				new AvroItemWriter<>(this.resource, this.schema, this.type):
 				new AvroItemWriter<>(this.resource, this.type);
-		avroItemWriter.setName(name);
+		avroItemWriter.setName(this.name);
 		return avroItemWriter;
 	}
 
